// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with a single child 1`] = `
<div
  className="root"
>
  <Card
    dense={false}
    disabled={false}
    inList={true}
    key=".0"
    raised={false}
    type="flat"
  >
    content
  </Card>
</div>
`;

exports[`rendering renders correctly with multiple children 1`] = `
<div
  className="root"
>
  <Card
    dense={false}
    disabled={false}
    inList={true}
    key=".0"
    raised={false}
    type="flat"
  >
    content 1
  </Card>
  <Card
    dense={false}
    disabled={false}
    inList={true}
    key=".1"
    raised={false}
    type="flat"
  >
    content 2
  </Card>
  <Card
    dense={false}
    disabled={false}
    inList={true}
    key=".2"
    raised={false}
    type="flat"
  >
    content 3
  </Card>
</div>
`;

exports[`rendering renders correctly with no children 1`] = `""`;
